# DroneGauges

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
Documentation/: CMakeLists.txt
Source/: main.cpp
Source/DroneGaugesCore/: CMakeLists.txt
Source/DroneGaugesCore/include/: Vector.h  base.h
Source/DroneGaugesCore/include/base/: base.h
Source/DroneGaugesCore/include/math/: Vector.h
Source/DroneGaugesCore/src/: Vector.cpp  base.cpp
Source/DroneGaugesCore/src/base/: base.cpp
Source/DroneGaugesCore/src/math/: Vector.cpp
Source/DroneGaugesUI/: CMakeLists.txt
Source/DroneGaugesUI/include/: MainWindow.h  application.h
Source/DroneGaugesUI/include/gauge/: PrimaryFlightDisplay.h
Source/DroneGaugesUI/includePrivate/gauge/pfd/: Adi.h  Alt.h  Asi.h  DisplayElement.h  Hdg.h  color.h  font.h
Source/DroneGaugesUI/src/: MainWindow.cpp  application.cpp
Source/DroneGaugesUI/src/gauge/: PrimaryFlightDisplay.cpp
Source/DroneGaugesUI/src/gauge/pfd/: Adi.cpp  Alt.cpp  Asi.cpp  DisplayElement.cpp  Hdg.cpp  font.cpp
Source/DroneGaugesUI/src/ui/: MainWindow.ui
cmake/: compiler_config.cmake  coverage_utils.cmake  qt_config.cmake
resources/: DroneGauges.qrc
tests/: CMakeLists.txt
tests/testsCore/: CMakeLists.txt
tests/testsCore/src/: CoreTestHelper.h  base_test.cpp  vector_test.cpp
